tests/apply/out.txt
error: mismatched types: expected unit, found ('29 -> '30) * '29 -> '30
  ┌─ err.sml:2:1
  │
2 │ val _: unit = apply
  │ ^^^^^^^^^^^^^^^^^^^

typechecking failed
